--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json --watch"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
+    "@fastify/helmet": "^11.0.0",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.3.12",
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
